--- a/index.html
+++ b/index.html
@@ -4,30 +4,49 @@
     <title>Taskqueues go wild</title>
     <meta charset="utf-8">
     <style>
-      @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
-      @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
-      @import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic);
-
       body {
-        font-family: 'Droid Serif';
+        font-family: 'arial';
       }
       h1, h2, h3 {
-        font-family: 'Yanone Kaffeesatz';
         font-weight: normal;
+        color: #fd0;
+      }
+      h1, h2 {
+        margin-bottom: 80px;
+      }
+      h3 {
+        margin: -60px 0 0 30px;
       }
       .notes {
         display: none;
       }
       .remark-slide-content{
-        font-size: 26px;
+        font-size: 36px;
+        background-color: #333;
+        color: white;
       }
-      .remark-code, .remark-inline-code { font-family: 'Ubuntu Mono'; }
+      .remark-slide-content h2{
+        font-size: 40px;
+      }
+      li{
+        margin-bottom: 20px;
+      }
+      .remark-code, .remark-inline-code {
+        font-size: 26px;
+        font-family: monospace; font-weight: thin;
+      }
       .logo img{width: 150px;}
-      .full img{width: 100%; max-height: 500px;}
+      .full img{width: 100%; max-height: 450px;}
+      .remark-slide-number{font-size: 20px;}
+      a, a:hover, a:visited{
+        font-size: 20px;
+        color: white;
+        line-height: 20px;
+      }
     </style>
   </head>
   <body>
-    <script src="https://gnab.github.io/remark/downloads/remark-latest.min.js">
+    <script src="remark-latest.min.js">
     </script>
     <script>
       var slideshow = remark.create({sourceUrl: 'prez.md'});
