--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
         background-color: #333;
         color: white;
       }
+      .remark-slide-content.no-padding{
+        padding: 0;
+      }
+      .remark-slide-content.white{
+        background-color: #fff;
+      }
       .remark-slide-content h2{
         font-size: 40px;
       }
@@ -42,6 +48,9 @@
         font-size: 20px;
         color: white;
         line-height: 20px;
+      }
+      .margin-top{
+        margin-top: 80px;
       }
     </style>
   </head>
